[tool.poetry]
name = "lake-inspector"
version = "0.1.0"
description = "The inspector tool to inspect and validate raw data in data lake"
authors = ["leehuwuj <leehuwuj@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.2.0"
pyarrow = "^11.0.0"
pandas = "^1.5.2"
duckdb = "^0.6.1"
click = "^8.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
python_methods = "test_*"
xfail_strict = true
addopts = "-s --verbose --capture=no --strict-markers --disable-warnings"

    